RESOLVED FIXED61609
FrameLoader cannot be null
https://bugs.webkit.org/show_bug.cgi?id=61609
Summary FrameLoader cannot be null
Adam Barth
Reported 2011-05-26 23:48:24 PDT
FrameLoader cannot be null
Attachments
Patch (4.80 KB, patch)
2011-05-26 23:50 PDT, Adam Barth
rniwa: review+
Adam Barth
Comment 1 2011-05-26 23:50:09 PDT
Adam Barth
Comment 2 2011-05-26 23:54:25 PDT
Note You need to log in before you can comment on or make changes to this bug.