2011-05-26  Adam Barth  <abarth@webkit.org>

Reviewed by Ryosuke Niwa.

        FrameLoader cannot be null
        https://bugs.webkit.org/show_bug.cgi?id=61609

        This code has a bunch of cargo-cult null checking.

        * html/HTMLMediaElement.cpp:
        (WebCore::HTMLMediaElement::createRenderer):
        (WebCore::HTMLMediaElement::attach):
        (WebCore::HTMLMediaElement::loadResource):
        (WebCore::HTMLMediaElement::getPluginProxyParams):
        (WebCore::HTMLMediaElement::createMediaPlayerProxy):
        (WebCore::HTMLMediaElement::updateWidget):


git-svn-id: svn://svn.chromium.org/blink/trunk@87479 bbb929c8-8fbe-4397-9dbb-9b2b20218538